<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/notification_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight="2"
        android:elevation="3dp"

        android:padding="0dp"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/notification_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/ic_notifications_black_24dp"
                    android:backgroundTint="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/notification_image"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/notification_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingTop="6dp"
                        android:text="@string/notification_title"
                        android:textColor="@color/blacktext" />

                    <TextView
                        android:id="@+id/notification_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:text="@string/notification_message" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="6dp"
                        android:paddingTop="6dp">


                        <TextView
                            android:id="@+id/txt_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/notification_date" />

                        <TextView
                            android:id="@+id/txt_department"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/notification_department" />

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>